--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="contact">
         <div class="small-title">Skills:</div>
         <div class="contact-list">
-          <div class="contact-item"><div class="icon">💻</div><div>Writer, Web development (HTML &amp; CSS)</div></div>
+          <div class="contact-item"><div class="icon">💻</div><div>Story writing, video & photo editing ,Web development(HTML &amp; CSS)</div></div>
 
           <div class="small-title" style="margin-top:6px">Languages:</div>
           <div class="contact-item"><div class="icon">🌐</div><div>English — Good</div></div>
@@ -47,13 +47,13 @@
       <header class="top">
         <div class="name">
           <h1>Neyayesh Najee</h1>
-          <div class="title">Web Developer & Editing Videos</div>
+          <div class="title">about me</div>
         </div>
         <div class="meta-sep" aria-hidden="true"></div>
       </header>
 
       <article class="summary" aria-label="About me">
-        ​"As an emerging and results-driven Web Developer, Editer Videos basic"
+        ​"Junior Web developer, Video & Photo editer, story writer"
       </article>
 
       <div class="side-row">
@@ -72,13 +72,7 @@
               <div class="skill">Writing</div>
               <div class="progress"><span style="width:90%"></span></div>
             </div>
-             <div>
-              <div class="skill">Cooking</div>
-              <div class="progress"><span style="width:60%"></span></div>
-            </div>
           </div>
-        </div>
-
         <div class="box projects">
           <h4>Academic History</h4>
           <ul>
@@ -87,10 +81,11 @@
           </ul>
 
           <h4 style="margin-top:16px">Education</h4>
-          <p style="margin-top:6px;color:var(--muted)"><strong>March 2025</strong> — O-level, Shammama international high school</p>
+          <p style="margin-top:6px;color:var(--muted)"><strong>2025</strong> — Shammamma International High School</p>
         </div>
       </div>
     </section>
   </div>
 </body>
 </html>
+
