--- a/index.html
+++ b/index.html
@@ -4,56 +4,48 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Neyayesh Najee - Resume</title>
-
-  <!-- Google font -->
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
-
-  <!-- style CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="wrap" role="main">
-    <!-- LEFT -->
-    <aside class="left" aria-labelledby="profile-name">
+    <aside class="left">
       <div class="avatar-wrap">
         <div class="avatar">
-          <!-- Neyayesh -->
-          <img src="Neyayesh Najee.jpg" alt="Profile Picture">
+          <img src="Neyayesh-Najee.jpg" alt="Neyayesh Najee">
         </div>
       </div>
 
-      <h3 id="profile-name">Neyayesh Najee</h3>
+      <h3>Neyayesh Najee</h3>
 
       <div class="contact">
         <div class="small-title">Skills:</div>
         <div class="contact-list">
-          <div class="contact-item"><div class="icon">💻</div><div>Story writing, video & photo editing ,Web development(HTML &amp; CSS)</div></div>
-
-          <div class="small-title" style="margin-top:6px">Languages:</div>
+          <div class="contact-item"><div class="icon">💻</div><div>Story writing, Video editing, Web development</div></div>
+          
+          <div class="small-title" style="margin-top:10px">Languages:</div>
           <div class="contact-item"><div class="icon">🌐</div><div>English — Good</div></div>
           <div class="contact-item"><div class="icon">📝</div><div>Persian / Dari — Native</div></div>
 
-          <div class="small-title" style="margin-top:6px">Contact</div>
-          <div class="contact-item"><div class="icon">📍</div><div>Quetta, Baluchistan, Hazara Town</div></div>
+          <div class="small-title" style="margin-top:10px">Contact:</div>
+          <div class="contact-item"><div class="icon">📍</div><div>Quetta, Hazara Town</div></div>
           <div class="contact-item"><div class="icon">📞</div><div>+92 319 3017533</div></div>
           <div class="contact-item"><div class="icon">✉</div><div><a href="mailto:neyayeshnajee9@gmail.com">neyayeshnajee9@gmail.com</a></div></div>
-          <div class="contact-item"><div class="icon">🔗</div><div><a href="https://www.linkedin.com/in/NeyayeshNajee" target="_blank">linkedin.com/in/NeyayeshNajee</a></div></div>
         </div>
       </div>
     </aside>
 
-    <!-- RIGHT -->
     <section class="right">
       <header class="top">
         <div class="name">
           <h1>Neyayesh Najee</h1>
-          <div class="title">about me</div>
+          <div class="title">Junior Web Developer & Video Editor</div>
         </div>
-        <div class="meta-sep" aria-hidden="true"></div>
+        <div class="meta-sep"></div>
       </header>
 
-      <article class="summary" aria-label="About me">
-        ​"Junior Web developer, Video & Photo editer, story writer"
+      <article class="summary">
+        "As an emerging Web Developer and Video Editor, I focus on creating clean designs and engaging visual stories."
       </article>
 
       <div class="side-row">
@@ -61,11 +53,11 @@
           <h4>Skills</h4>
           <div class="skills-list">
             <div>
-              <div class="skill">HTML & css</div>
+              <div class="skill">HTML & CSS</div>
               <div class="progress"><span style="width:80%"></span></div>
             </div>
             <div>
-              <div class="skill">Editing Videos</div>
+              <div class="skill">Video Editing</div>
               <div class="progress"><span style="width:70%"></span></div>
             </div>
             <div>
@@ -73,19 +65,17 @@
               <div class="progress"><span style="width:90%"></span></div>
             </div>
           </div>
-        <div class="box projects">
+        </div> <div class="box projects">
           <h4>Academic History</h4>
           <ul>
-            <li><a href="mailto:shamamahighschool@gmail.com" target="_blank">Gmail</a></li>
-            <li><a href="https://www.facebook.com/share/17jCwsYyBf/" target="_blank">Facebook</a></li>
+            <li><a href="mailto:shamamahighschool@gmail.com">School Gmail</a></li>
+            <li><a href="https://www.facebook.com/share/17jCwsYyBf/" target="_blank">Facebook Page</a></li>
           </ul>
-
           <h4 style="margin-top:16px">Education</h4>
-          <p style="margin-top:6px;color:var(--muted)"><strong>2025</strong> — Shammamma International High School</p>
+          <p><strong>2025</strong> — Shammama International High School</p>
         </div>
       </div>
     </section>
   </div>
 </body>
 </html>
-
