--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
@@ -18,9 +19,9 @@
       <h3>Neyayesh Najee</h3>
 
       <div class="contact">
-        <div class="small-title">Skills:</div>
+        <div class="small-title">Expertise:</div>
         <div class="contact-list">
-          <div class="contact-item"><div class="icon">💻</div><div>Story writing, Video editing, Web development</div></div>
+          <div class="contact-item"><div class="icon">💻</div><div>Story Writing, Video Editing, Web Development</div></div>
           
           <div class="small-title" style="margin-top:10px">Languages:</div>
           <div class="contact-item"><div class="icon">🌐</div><div>English — Good</div></div>
@@ -44,12 +45,12 @@
       </header>
 
       <article class="summary">
-        "As an emerging Web Developer and Video Editor, I focus on creating clean designs and engaging visual stories."
+        "I am an emerging Web Developer and Video Editor focused on creating clean designs and engaging visual stories. I blend technical skill with a passion for creative writing."
       </article>
 
       <div class="side-row">
         <div class="box">
-          <h4>Skills</h4>
+          <h4>Skill Levels</h4>
           <div class="skills-list">
             <div>
               <div class="skill">HTML & CSS</div>
@@ -60,22 +61,23 @@
               <div class="progress"><span style="width:70%"></span></div>
             </div>
             <div>
-              <div class="skill">Writing</div>
+              <div class="skill">Creative Writing</div>
               <div class="progress"><span style="width:90%"></span></div>
             </div>
           </div>
-        </div> <div class="box projects">
+        </div> 
+
+        <div class="box projects">
           <h4>Academic History</h4>
           <ul>
-            <li><a href="mailto:shamamahighschool@gmail.com">School Gmail</a></li>
-            <li><a href="https://www.facebook.com/share/17jCwsYyBf/" target="_blank">Facebook Page</a></li>
+            <li><a href="mailto:shamamahighschool@gmail.com">School Email</a></li>
+            <li><a href="https://www.facebook.com/share/17jCwsYyBf/" target="_blank">School Facebook</a></li>
           </ul>
           <h4 style="margin-top:16px">Education</h4>
-          <p><strong>2025</strong> — Shammama International High School</p>
+          <p><strong>2025</strong> — O-level, Shammama International High School</p>
         </div>
       </div>
     </section>
   </div>
 </body>
 </html>
-
