--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Neyayesh Najee - Resume</title>
+  
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,9 +21,9 @@
       <h3>Neyayesh Najee</h3>
 
       <div class="contact">
-        <div class="small-title">Expertise:</div>
+        <div class="small-title">Skills:</div>
         <div class="contact-list">
-          <div class="contact-item"><div class="icon">💻</div><div>Story Writing, Video Editing, Web Development</div></div>
+          <div class="contact-item"><div class="icon">💻</div><div>Story writing, Video & Photo editing, Web development</div></div>
           
           <div class="small-title" style="margin-top:10px">Languages:</div>
           <div class="contact-item"><div class="icon">🌐</div><div>English — Good</div></div>
@@ -39,42 +41,42 @@
       <header class="top">
         <div class="name">
           <h1>Neyayesh Najee</h1>
-          <div class="title">Junior Web Developer & Video Editor</div>
+          <div class="title">about me</div>
         </div>
         <div class="meta-sep"></div>
       </header>
 
       <article class="summary">
-        "I am an emerging Web Developer and Video Editor focused on creating clean designs and engaging visual stories. I blend technical skill with a passion for creative writing."
+        "junior Web Developer, Video & Photo Editor and story writing."
       </article>
 
       <div class="side-row">
         <div class="box">
-          <h4>Skill Levels</h4>
+          <h4>Skills</h4>
           <div class="skills-list">
             <div>
               <div class="skill">HTML & CSS</div>
               <div class="progress"><span style="width:80%"></span></div>
             </div>
             <div>
-              <div class="skill">Video Editing</div>
+              <div class="skill">Video & Photo Editing</div>
               <div class="progress"><span style="width:70%"></span></div>
             </div>
             <div>
-              <div class="skill">Creative Writing</div>
+              <div class="skill">Writing</div>
               <div class="progress"><span style="width:90%"></span></div>
             </div>
           </div>
-        </div> 
+        </div>
 
         <div class="box projects">
           <h4>Academic History</h4>
           <ul>
-            <li><a href="mailto:shamamahighschool@gmail.com">School Email</a></li>
-            <li><a href="https://www.facebook.com/share/17jCwsYyBf/" target="_blank">School Facebook</a></li>
+            <li><a href="mailto:shamamahighschool@gmail.com">School Gmail</a></li>
+            <li><a href="https://www.facebook.com/share/17jCwsYyBf/" target="_blank">Facebook Page</a></li>
           </ul>
           <h4 style="margin-top:16px">Education</h4>
-          <p><strong>2025</strong> — O-level, Shammama International High School</p>
+          <p><strong>2025</strong> — Shammama International High School</p>
         </div>
       </div>
     </section>
