--- a/index.html
+++ b/index.html
@@ -4,50 +4,56 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Neyayesh Najee - Resume</title>
-  
+
+  <!-- Google font -->
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
 
+  <!-- style CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="wrap" role="main">
-    <aside class="left">
+    <!-- LEFT -->
+    <aside class="left" aria-labelledby="profile-name">
       <div class="avatar-wrap">
         <div class="avatar">
-          <img src="Neyayesh-Najee.jpg" alt="Neyayesh Najee">
+          <!-- Neyayesh -->
+          <img src="Neyayesh-Najee.jpg" alt="Profile Picture">
         </div>
       </div>
 
-      <h3>Neyayesh Najee</h3>
+      <h3 id="profile-name">Neyayesh Najee</h3>
 
       <div class="contact">
         <div class="small-title">Skills:</div>
         <div class="contact-list">
-          <div class="contact-item"><div class="icon">💻</div><div>Story writing, Video & Photo editing, Web development</div></div>
-          
-          <div class="small-title" style="margin-top:10px">Languages:</div>
+          <div class="contact-item"><div class="icon">💻</div><div>Writer, Web development (HTML &amp; CSS)</div></div>
+
+          <div class="small-title" style="margin-top:6px">Languages:</div>
           <div class="contact-item"><div class="icon">🌐</div><div>English — Good</div></div>
           <div class="contact-item"><div class="icon">📝</div><div>Persian / Dari — Native</div></div>
 
-          <div class="small-title" style="margin-top:10px">Contact:</div>
-          <div class="contact-item"><div class="icon">📍</div><div>Quetta, Hazara Town</div></div>
+          <div class="small-title" style="margin-top:6px">Contact</div>
+          <div class="contact-item"><div class="icon">📍</div><div>Quetta, Baluchistan, Hazara Town</div></div>
           <div class="contact-item"><div class="icon">📞</div><div>+92 319 3017533</div></div>
           <div class="contact-item"><div class="icon">✉</div><div><a href="mailto:neyayeshnajee9@gmail.com">neyayeshnajee9@gmail.com</a></div></div>
+          <div class="contact-item"><div class="icon">🔗</div><div><a href="https://www.linkedin.com/in/NeyayeshNajee" target="_blank">linkedin.com/in/NeyayeshNajee</a></div></div>
         </div>
       </div>
     </aside>
 
+    <!-- RIGHT -->
     <section class="right">
       <header class="top">
         <div class="name">
           <h1>Neyayesh Najee</h1>
-          <div class="title">about me</div>
+          <div class="title">About me</div>
         </div>
-        <div class="meta-sep"></div>
+        <div class="meta-sep" aria-hidden="true"></div>
       </header>
 
-      <article class="summary">
-        "junior Web Developer, Video & Photo Editor and story writing."
+      <article class="summary" aria-label="About me">
+        ​"Junior Web Development, Video & Photo Editor and stories writer"
       </article>
 
       <div class="side-row">
@@ -55,16 +61,20 @@
           <h4>Skills</h4>
           <div class="skills-list">
             <div>
-              <div class="skill">HTML & CSS</div>
+              <div class="skill">HTML & css</div>
               <div class="progress"><span style="width:80%"></span></div>
             </div>
             <div>
-              <div class="skill">Video & Photo Editing</div>
+              <div class="skill">Editing Videos</div>
               <div class="progress"><span style="width:70%"></span></div>
             </div>
             <div>
-              <div class="skill">Writing</div>
+              <div class="skill">Editing Photos</div>
               <div class="progress"><span style="width:90%"></span></div>
+            </div>
+             <div>
+              <div class="skill">Stories Writing</div>
+              <div class="progress"><span style="width:60%"></span></div>
             </div>
           </div>
         </div>
@@ -72,11 +82,12 @@
         <div class="box projects">
           <h4>Academic History</h4>
           <ul>
-            <li><a href="mailto:shamamahighschool@gmail.com">School Gmail</a></li>
-            <li><a href="https://www.facebook.com/share/17jCwsYyBf/" target="_blank">Facebook Page</a></li>
+            <li><a href="mailto:shamamahighschool@gmail.com" target="_blank">Gmail</a></li>
+            <li><a href="https://www.facebook.com/share/17jCwsYyBf/" target="_blank">Facebook</a></li>
           </ul>
+
           <h4 style="margin-top:16px">Education</h4>
-          <p><strong>2025</strong> — Shammama International High School</p>
+          <p style="margin-top:6px;color:var(--muted)"><strong></strong>2025</strong> — Shammama international high school</p>
         </div>
       </div>
     </section>
