--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="contact">
         <div class="small-title">Skills:</div>
         <div class="contact-list">
-          <div class="contact-item"><div class="icon">💻</div><div>Writer, Web development (HTML &amp; CSS)</div></div>
+          <div class="contact-item"><div class="icon">💻</div><div> ​"Web Developement, Editing Video & Photo, and stories writing"</div></div>
 
           <div class="small-title" style="margin-top:6px">Languages:</div>
           <div class="contact-item"><div class="icon">🌐</div><div>English — Good</div></div>
@@ -53,7 +53,7 @@
       </header>
 
       <article class="summary" aria-label="About me">
-        ​"Junior Web Development, Video & Photo Editor and stories writer"
+        ​"Junior Web Developer, Video & Photo Editor and stories writer"
       </article>
 
       <div class="side-row">
@@ -94,3 +94,4 @@
   </div>
 </body>
 </html>
+
