--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <h3 id="profile-name">Neyayesh Najee</h3>
 
       <div class="contact">
-        <div class="small-title">Skills:</div>
+        <div class="small-title">Skills &amp; Hobbies:</div>
         <div class="contact-list">
-          <div class="contact-item"><div class="icon">💻</div><div> ​"Web Developement, Editing Video & Photo, and stories writing"</div></div>
+          <div class="contact-item"><div class="icon">💻</div><div>"I am a basic writer, a Web Developer familiar with HTML and CSS, and I also enjoy video editing. In my free time, I love learning new skills and listening to music in different languages to expand my horizons."</div></div>
 
           <div class="small-title" style="margin-top:6px">Languages:</div>
           <div class="contact-item"><div class="icon">🌐</div><div>English — Good</div></div>
@@ -47,13 +47,13 @@
       <header class="top">
         <div class="name">
           <h1>Neyayesh Najee</h1>
-          <div class="title">About me</div>
+          <div class="title">Web Developer | Visual Storyteller | Content Creator</div>
         </div>
         <div class="meta-sep" aria-hidden="true"></div>
       </header>
 
       <article class="summary" aria-label="About me">
-        ​"Junior Web Developer, Video & Photo Editor and stories writer"
+      "I am a passionate Junior Web Developer with a creative soul. I don’t just build websites; I tell stories through professional video editing and creative writing. My goal is to combine clean, functional code with engaging visual content to create unique digital experiences. Whether it’s developing a site or crafting a visual narrative, I bring precision and creativity to every project."
       </article>
 
       <div class="side-row">
@@ -61,20 +61,16 @@
           <h4>Skills</h4>
           <div class="skills-list">
             <div>
-              <div class="skill">HTML & css</div>
+              <div class="skill">"Web development (HTML &amp; CSS)"</div>
+              <div class="progress"><span style="width:50%"></span></div>
+            </div>
+            <div>
+              <div class="skill">"Editing videos &amp; photos"</div>
+              <div class="progress"><span style="width:30%"></span></div>
+            </div>
+            <div>
+              <div class="skill">"Stories Writing"</div>
               <div class="progress"><span style="width:80%"></span></div>
-            </div>
-            <div>
-              <div class="skill">Editing Videos</div>
-              <div class="progress"><span style="width:70%"></span></div>
-            </div>
-            <div>
-              <div class="skill">Editing Photos</div>
-              <div class="progress"><span style="width:90%"></span></div>
-            </div>
-             <div>
-              <div class="skill">Stories Writing</div>
-              <div class="progress"><span style="width:60%"></span></div>
             </div>
           </div>
         </div>
@@ -87,7 +83,7 @@
           </ul>
 
           <h4 style="margin-top:16px">Education</h4>
-          <p style="margin-top:6px;color:var(--muted)"><strong></strong>2025</strong> — Shammama international high school</p>
+          <p style="margin-top:6px;color:var(--muted)"><strong>2025</strong>—Shammama international high school</p>
         </div>
       </div>
     </section>
